--- a/project1-tip-calculator/index.html
+++ b/project1-tip-calculator/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body id="contain">
+<div class="wrapper">
+    <div>
+        <h2>tip calculator</h2>
+        <form>
+            <h5>Enter the bill amount and tip percentage to calculate the total</h5>
+            <label for="">Bill amount</label>
+            <input type="text" placeholder="2000">
+            <label for="">Tip percentage</label>
+            <input type="text" placeholder="24">
+            <button>CALCULATE</button>
+        </form>
+        total: 2048.00
+    </div>
+</div>
 </body>
-
 </html>
