user live search

--- a/project1-tip-calculator/index.html
+++ b/project1-tip-calculator/index.html
@@ -20,7 +20,7 @@
             <input type="text" placeholder="24">
             <button>CALCULATE</button>
         </form>
-        total: 2048.00
+        <p>total: 2048.00</p>
     </div>
 </div>
 </body>
