--- a/project3-user-live-filter/index.html
+++ b/project3-user-live-filter/index.html
@@ -9,6 +9,24 @@
 </head>
 
 <body>
+    <div class="contena">
+        <div>
+            <form>
+                <h4>live user filter</h4>
+                <p>search by name/or location</p>
+                <input type="text" placeholder="searching">
+            </form>
+            <div class="user">
+                <article>
+                    <img src="images/user1.jpeg">
+                    <div class="username">
+                    <h3>glandon gordon</h3>
+                    <P>brockton canada</P>
+                </div>
+                </article>
+            </div>            
+        </div>
+    </div>
 </body>
 
 </html>
