--- a/project2-age-calculator/index.html
+++ b/project2-age-calculator/index.html
@@ -9,6 +9,17 @@
 </head>
 
 <body>
+    <div class="mama">
+        <div>
+            <h1>Age Calculator</h1>
+            <form>
+                <h2>Enter your date of birth</h2>
+                <input type="date" placeholder="09/13/2023">
+                <button>Calculate Age</button>
+            </form>
+            <p>your age is 21 years old</p>
+        </div>
+    </div>
 </body>
 
 </html>
