--- a/project3-user-live-filter/index.html
+++ b/project3-user-live-filter/index.html
@@ -7,7 +7,6 @@
     <title>User live filter</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
     <div class="contena">
         <div>
@@ -16,12 +15,33 @@
                 <p>search by name/or location</p>
                 <input type="text" placeholder="searching">
             </form>
-            <div class="user">
+        <div class="user">
                 <article>
                     <img src="images/user1.jpeg">
                     <div class="username">
                     <h3>glandon gordon</h3>
                     <P>brockton canada</P>
+                </div> 
+                </article>
+                <article>
+                    <img src="images/user1.jpeg">
+                    <div class="username">
+                    <h3>Alvide Madland</h3>
+                    <P>Kalvag Norway</P>
+                </div>
+                </article>
+                <article>
+                    <img src="images/user1.jpeg">
+                    <div class="username">
+                    <h3>Afsar Pocan</h3>
+                    <P>Kirikiri Turkey</P>
+                </div>
+                </article>
+                <article>
+                    <img src="images/user1.jpeg">
+                    <div class="username">
+                    <h3>gordedum nickolemko</h3>
+                    <P>turka Ukrain</P>
                 </div>
                 </article>
             </div>            
